--- a/estilo/style.css
+++ b/estilo/style.css
@@ -4,3 +4,57 @@
   padding: 0px;
   font-family: Arial, Helvetica, sans-serif;
 }
+html,
+body {
+  height: 100vh;
+  width: 100vw;
+  background-color: black;
+}
+body {
+  background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+main {
+  height: 100vh;
+}
+.telefone {
+  display: flex;
+  height: 627px;
+  width: 311px;
+  justify-content: center;
+  align-items: center;
+  background: url(../imagens/frame-iphone.png) no-repeat;
+}
+.tela {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 475px;
+  width: 269px;
+}
+.links {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 20px;
+}
+
+#insta {
+  display: flex;
+  height: 50px;
+  width: 50px;
+  background: url("../imagens/logo-instagram.jpg") no-repeat top left;
+  background-size: cover;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+#git {
+  display: flex;
+  height: 50px;
+  width: 50px;
+  background: url("../imagens/logo-github.jpg") no-repeat top left;
+  background-size: cover;
+  border-radius: 5px;
+}
