--- a/estilo/style.css
+++ b/estilo/style.css
@@ -18,6 +18,10 @@ body {
 }
 main {
   height: 100vh;
+ /*  display: flex;
+  justify-content: center;
+  align-items: center; 
+  alinhamento zix*/
 }
 .telefone {
   display: flex;
