--- a/estilo/style.css
+++ b/estilo/style.css
@@ -7,9 +7,9 @@
 }
 html,
 body {
-  height: 100vh;
+  /*   height: 100vh;
   width: 100vw;
-  background-color: black;
+  background-color: black; */
 }
 body {
   background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
@@ -18,10 +18,17 @@ body {
 }
 main {
   height: 100vh;
- /*  display: flex;
+  display: flex;
   justify-content: center;
-  align-items: center; 
-  alinhamento zix*/
+  align-items: center;
+  overflow: hidden;
+}
+.telefone-container {
+  margin: 0 auto;
+  /* align-self: center;
+  margin-right: auto; */
+  /*  margin: 0 auto;
+  align-self: center; */
 }
 .telefone {
   display: flex;
@@ -29,8 +36,9 @@ main {
   width: 311px;
   justify-content: center;
   align-items: center;
-  background: url(../imagens/frame-iphone.png) no-repeat;
+  background: url("../imagens/frame-iphone.png") no-repeat;
 }
+
 .tela {
   display: flex;
   justify-content: center;
@@ -41,10 +49,10 @@ main {
 .links {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
+  align-self: flex-start;
   gap: 20px;
-  overflow-x: hidden;
+  padding-right: 40px;
+  padding-top: 40px;
 }
 
 #insta {
@@ -54,7 +62,6 @@ main {
   background: url("../imagens/logo-instagram.jpg") no-repeat top left;
   background-size: cover;
   border-radius: 5px;
-  margin-top: 20px;
 }
 #git {
   display: flex;
